21.02.2025 - feature/153-league-match-generation-and-tour-tracking | added method to send request for match-service